client/main.css
@import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';

/*  media queries for different screen sizes */
@media (max-width: 600px) {

	//need to fix the background-image height for small screen sizes
	body {
		postion: relative;
		max-width: 100%;
		height: 500px;
		background-color: #263d36;
		background-image: linear-gradient(rgba(204, 255, 255, 0.1),rgba(51, 204, 255, 0.6)),url("https://s3-us-west-2.amazonaws.com/acatmoreimages/background/pexels-photo.jpg");		background-position: center center;
		background-repeat: no-repeat;
		background-size: cover;
		line-height: 1.2;
		padding: 5px 2em;
		text-align: center;
	}
		#image-s{
			display: block;
		}
		#image-m{
			display: none;
		}
		#image-l{
			display: none;
		}
		#image-origin{
			display: none;
		}

}

@media (max-width: 915px) {

	//need to fix the background-image height for small screen sizes

	.page-home .myName {
	margin-top: 200px;
	margin-right: 25%;
}
	body {
		postion: relative;
		max-width: 100%;
		height: 500px;
		background-color: #263d36;
		background-image: linear-gradient(rgba(204, 255, 255, 0.1),rgba(51, 204, 255, 0.6)),url("https://s3-us-west-2.amazonaws.com/acatmoreimages/background/pexels-photo.jpg");		background-position: center center;
		background-repeat: no-repeat;
		background-size: cover;
		line-height: 1.2;
		padding: 5px 2em;
		text-align: center;
	}
	#image-s{
		display: none;
	}
	#image-m{
		display: block;
	}
	#image-l{
		display: none;
	}
	#image-origin{
		display: none;
	}
}

@media (min-width: 916px) {
	.page-home .myName {
	margin-top: 200px;
	margin-right: 31%;
}
	body {
		postion: relative;
		max-width: 100%;
		height: 850px;
		background-color: #263d36;
		background-image: linear-gradient(rgba(204, 255, 255, 0.1),rgba(51, 204, 255, 0.6)),url("https://s3-us-west-2.amazonaws.com/acatmoreimages/background/pexels-photo.jpg");
		background-position: center center;
		background-repeat: no-repeat;
		background-size: cover;
		line-height: 1.2;
		padding: 5px 2em;
		text-align: center;

	}
	#image-s{
		display: none;
	}
	#image-m{
		display: none;
	}
	#image-l{
		display: block;
	}
	#image-origin{
		display: none;
	}
}

@media (min-width: 1921px) {
	.page-home .myName {
	margin-top: 200px;
	margin-right: 31%;
}
	body {
		postion: relative;
		max-width: 100%;
		height: 100%;
		background-color: #263d36;
		background-image: linear-gradient(rgba(204, 255, 255, 0.1),rgba(51, 204, 255, 0.6)),url("https://s3-us-west-2.amazonaws.com/acatmoreimages/background/pexels-photo.jpg");
		background-position: center center;
		background-repeat: no-repeat;
		background-size: cover;
		line-height: 1.2;
		padding: 5px 2em;
		text-align: center;

	}
	#image-s{
		display: none;
	}
	#image-m{
		display: none;
	}
	#image-l{
		display: none;
	}
	#image-origin{
		display: block;
	}
}

html {
	background-color: rgb(0, 94, 128);
}

.ui-view {
	width: 100%;
	height: 100%;
	min-height: 100vh;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: -50px;
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	align-items: center;
	align-content: space-around;
	justify-content: center;
	word-break: normal;
	position: relative;

}

/* navigation */

.myName {
	display: inline;
	height: 100px;
	width: 300px;
	position: relative;
	top: 0;
}

.myName h1 {
	color: rgb(225, 14, 126);
	font-size: 2em;
}

.myName h2 {
	color: white;
	font-size: 1.5em;
}
.myName a {
	color: rgb(225, 14, 126); 
	font-size: 1em;
	margin: 0px;
	padding: 0px;
	text-decoration: none;
}

.pages {
	width: 100%;
	list-style-type: none;
	margin: 0;
	padding: 0;
	float: left;
}

.invert {
	-webkit-filter: invert(100%); filter: invert(100%);
}

header {
	top: 0;
	left: 0;
	position: relative;
	width: 100%;
	flex-shrink: 0;
}

header ul {
	list-style-type: none;
}

header li {
	list-style-type: none;
	margin: 0px;
	padding: 0px;
	text-align: center;
	display: inline;
	float: left;
}

header h1 {
	color: rgb(230, 255, 255);
	font-size: 3em;
	font-weight: 30em;
}

header h4 {
	margin: 0px;
	padding: 0px;
}

header h2 {
	color: rgb(225, 14, 126);
}

.header-link a {
	color: rgb(225, 14, 126);
	display: block;
	font-size: 1em;
	letter-spacing: .2em;
	padding: 2em;
	text-transform: uppercase;
	text-decoration: none;
}

header .myName {
	position: absolute;
}

header a:hover {
	color: white;
}

header img {
	color: white;
	height: 16px;
	width: 16px;
}

.dropdown {
	position: relative;
	display: inline-block;
}

.dropdown-content {
	display: none;
	position: absolute;
	border-radius: 10px;
	border: solid 1px black;
	background-color: rgba(48,161,199, 0.9);
	margin: 0px;
	padding: 0px;

}

.dropdown:hover .dropdown-content {
	display: block;
	z-index: 3;
}

/* main content */

.content {
	margin: 0;
	flex-shrink: 0;
	flex-grow: 1;
}

body {
	display: block;
	max-width: 5000px;
	font-family: "Roboto", "Helvetica", "Ariel", sans-serif;
	color: white;
}


h2 {
	margin-top: 5px;
	padding-top: 5px;
}

a {
	color: white;
}

/* .wrapper {
	margin-left: 10%;
	margin-right: 10%;
	margin-top: 10%;
}
*/
.colDetail {
margin-left: 0;
}

.colDetail a {
	color: rgb(225, 14, 126);
	font-family: "Roboto", "Helvetica", "Ariel", sans-serif;
	text-decoration: none;
}

.colDetail a:hover {
	background: rgb(225, 14, 126);
	border-radius: 5px;
	color: white;
}

 i {
 	font-size: 4em;
 }

.colMain {

}

.about {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: center;
}
.about-content {
	position: relative;
	flex-direction: column;
	margin-top: 5%;
	flex-grow: 1;
	max-width: 50%;
	border-radius: 10px;
	background: rgba(48,161,199,0.8);

}

.about-content h2 {
	color: 
}

.about-content p {
	max-width: 70%;
	margin-left: 15%;
}

.profile {
	position: relative;
	flex-grow: 0;
	border-radius: 50%;
	height: auto;
	width: 150px;
	border: solid 4px rgb(225, 14, 126);
}

.img-container {
	width: 100%;
	position: relative;

}

.portfolio-img {
	height: auto;
	width: 50%;
	opacity: 0.7;
	margin-left: 25%;
	box-shadow: 10px 10px 5px rgba(0,0,0,0.4);
}

/* foooter */

footer {
	height: 50px;
	padding-bottom: 10px;
	align-self: flex-end;
	flex-shrink: 0;
	text-align: right;
	position: relative;
}


.social {
	display: block;
	width: 100%;
	margin-right: 10%;
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: flex-end;
	align-items: flex-end;
	align-content: flex-end;
	position: relative;

}

.page-contact .social {
	margin-top: 500px;
}

.social-button {
	margin: 10px;
}

.social a {
    display: block;
    color: white;
    text-align: center;
    padding: 16px;
    text-decoration: none;
}

.social div {
	list-style-type: none;
	text-decoration: none;
	border-radius: 175px;
	padding: 7px;
	margin: 0px;
	overflow: hidden;
}

.social div:hover {
	background: rgb(225, 14, 126);
}

